Added auth functionality
